# op-tee_example

./: CMakeLists.txt  Makefile  build_ta_mytest_qemu.sh
app/: CMakeLists.txt  Makefile  main.c
so/: CMakeLists.txt  Makefile  my_test_ca.h  so.c  so.h
ta/: Makefile
